accounts/balances, mined_uncles, update swagger.yaml
