# jsearch/api/models/ballance.py
@@ -9,13 +9,13 @@ from jsearch.api.models.base_model_ import Model
 from jsearch.api import util
 
 
-class Ballance(Model):
+class Balance(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, ballance: int=None, address: str=None):  # noqa: E501
+    def __init__(self, balance: int=None, address: str=None):  # noqa: E501
         """Ballance - a model defined in Swagger
 
         :param ballance: The ballance of this Ballance.  # noqa: E501
@@ -24,20 +24,20 @@ class Ballance(Model):
         :type address: str
         """
         self.swagger_types = {
-            'ballance': int,
+            'balance': int,
             'address': str
         }
 
         self.attribute_map = {
-            'ballance': 'ballance',
+            'balance': 'ballance',
             'address': 'address'
         }
 
-        self._ballance = ballance
+        self._balance = balance
         self._address = address
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Ballance':
+    def from_dict(cls, dikt) -> 'Balance':
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -48,17 +48,17 @@ class Ballance(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def ballance(self) -> int:
+    def balance(self) -> int:
         """Gets the ballance of this Ballance.
 
 
         :return: The ballance of this Ballance.
         :rtype: int
         """
-        return self._ballance
+        return self._balance
 
-    @ballance.setter
-    def ballance(self, ballance: int):
+    @balance.setter
+    def balance(self, balance: int):
         """Sets the ballance of this Ballance.
 
 
@@ -66,7 +66,7 @@ class Ballance(Model):
         :type ballance: int
         """
 
-        self._ballance = ballance
+        self._balance = balance
 
     @property
     def address(self) -> str:
